--- a/templates/lawMention/index.html.twig
+++ b/templates/lawMention/index.html.twig
@@ -16,7 +16,7 @@
 				<li class="list-unstyled">Propriétaire: Sébastien Mirland Entrepreneur Indépendant</li>
 				<li class="list-unstyled mb-3">Numéro d’immatriculation: 87874157800016</li>
 				<li class="list-unstyled">Conception et réalisation: Wild Code School</li>
-				<li class="list-unstyled">Hébergement:</li>
+				<li class="list-unstyled">Hébergement: OVH</li>
 			</ul>
 		</article>
 		<article class="mb-5">
